mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-server
  labels:
     app: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysqldb
        tier: db
    spec:
      containers:
        name: mysql
        image: mysql:5.6
    volumes:
      - name: mysql-pv
        persistentVolumeClaim:
          claimName: mysql-pvc
