pod-kuar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuar-demo
  namespace: dev
  labels:
    tier: database
spec:
  containers:
  - name: kuar-demo
    image: gcr.io/kuar-demo/kuard-amd64:1
    ports:
      - containerPort: 8081
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
