pod-redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: test
  labels:
    tier: database
spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
      - containerPort: 5432
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: dev
  labels:
    tier: database
spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
      - containerPort: 5432
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: prod
  labels:
    tier: database
spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
      - containerPort: 5432
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
